# xbitinfo

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .ruffconfig  AUTHORS.rst  CHANGELOG.rst  CITATION.cff  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  README.md  README.rst  bitround.py  conftest.py  environment.yml  install_julia_packages.jl  paper.bib  paper.md  pyproject.toml  requirements.txt  requirements_dev.txt  save_compressed.py  setup.cfg  setup.py  setup_levante.md  versioneer.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: benchmarks.yml  ci.yaml  pypi.yml  updater.yaml
asv_bench/: asv.conf.json
asv_bench/benchmarks/: __init__.py  benchmarks_bitround.py  benchmarks_get_bitinformation.py  benchmarks_get_keepbits.py
bitinformation_pipeline/: __init__.py  bitinformation_pipeline.py  bitround.py  cli.py  get_n_plot_bitinformation.jl  graphics.py  save_compressed.py  save_compressed_zarr.py
docs/: ArtificialInformation_Filter.ipynb  Makefile  api.rst  chunking.ipynb  conf.py  environment.yml  examples.rst  index.rst  installation.rst  make.bat  quick-start.ipynb  usage.rst
examples/: quick-start.ipynb  singe_file_example.ipynb
tests/: __init__.py  environment.yaml  environment.yml  test_bitinformation_pipeline.py  test_bitround.py  test_get_bitinformation.py  test_get_keepbits.py  test_prefect_optional.py  test_save_compressed.py  test_to_compressed_netcdf.py  test_visualisation.py  test_xr_bitround.py
xbitinfo/: __init__.py  _py_bitinfo.py  _version.py  bitinformation_wrapper.jl  bitround.py  graphics.py  julia_helpers.py  save_compressed.py  xbitinfo.py
